--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@biconomy/web3-auth": "^2.0.0",
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
+    "@huddle01/auth": "^0.0.1",
+    "@huddle01/react": "^0.0.10",
     "@lighthouse-web3/sdk": "^0.2.1",
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@openzeppelin/contracts": "^4.8.3",
@@ -17,13 +19,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "connectkit": "^1.2.3",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "wagmi": "^0.12.12",
+    "web-vitals": "^2.1.4",
+    "web3modal": "^1.9.12"
   },
   "scripts": {
     "start": "react-app-rewired start",
