--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@wallet01/evm": "^0.10.0",
+    "@wallet01/react": "^0.8.7",
+    "@web3modal/ethereum": "^2.3.7",
+    "@web3modal/react": "^2.3.7",
     "connectkit": "^1.2.3",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
