--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native-web": "^0.19.4",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "wagmi": "^0.12.12",
